[gd_scene load_steps=82 format=2]

[ext_resource path="res://Main Game.gd" type="Script" id=1]
[ext_resource path="res://sprites/background.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Silver.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://TimerText.gd" type="Script" id=4]
[ext_resource path="res://TimerAnim.gd" type="Script" id=5]
[ext_resource path="res://sprites/dead_ground.png" type="Texture" id=6]
[ext_resource path="res://sprites/ground.png" type="Texture" id=7]
[ext_resource path="res://FloorTransition.gd" type="Script" id=8]
[ext_resource path="res://sprites/Floor Destroy/render.png_0.png" type="Texture" id=9]
[ext_resource path="res://sprites/Floor Destroy/render.png_1.png" type="Texture" id=10]
[ext_resource path="res://sprites/Floor Destroy/render.png_2.png" type="Texture" id=11]
[ext_resource path="res://sprites/Floor Destroy/render.png_3.png" type="Texture" id=12]
[ext_resource path="res://sprites/Floor Destroy/render.png_4.png" type="Texture" id=13]
[ext_resource path="res://sprites/Floor Destroy/render.png_5.png" type="Texture" id=14]
[ext_resource path="res://sprites/Floor Destroy/render.png_6.png" type="Texture" id=15]
[ext_resource path="res://sprites/Floor Destroy/render.png_7.png" type="Texture" id=16]
[ext_resource path="res://sprites/Floor Destroy/render.png_8.png" type="Texture" id=17]
[ext_resource path="res://sprites/Floor Destroy/render.png_9.png" type="Texture" id=18]
[ext_resource path="res://sprites/Floor Destroy/render.png_10.png" type="Texture" id=19]
[ext_resource path="res://sprites/Floor Destroy/render.png_11.png" type="Texture" id=20]
[ext_resource path="res://sprites/Floor Destroy/render.png_12.png" type="Texture" id=21]
[ext_resource path="res://sprites/Floor Destroy/render.png_13.png" type="Texture" id=22]
[ext_resource path="res://sprites/Floor Destroy/render.png_14.png" type="Texture" id=23]
[ext_resource path="res://sprites/Floor Destroy/render.png_15.png" type="Texture" id=24]
[ext_resource path="res://sprites/Floor Destroy/render.png_16.png" type="Texture" id=25]
[ext_resource path="res://sprites/Floor Destroy/render.png_17.png" type="Texture" id=26]
[ext_resource path="res://sprites/Floor Destroy/render.png_18.png" type="Texture" id=27]
[ext_resource path="res://sprites/Floor Destroy/render.png_19.png" type="Texture" id=28]
[ext_resource path="res://sprites/Floor Destroy/render.png_20.png" type="Texture" id=29]
[ext_resource path="res://sprites/Floor Destroy/render.png_21.png" type="Texture" id=30]
[ext_resource path="res://sprites/Floor Destroy/render.png_22.png" type="Texture" id=31]
[ext_resource path="res://sprites/Floor Destroy/render.png_23.png" type="Texture" id=32]
[ext_resource path="res://sprites/Floor Destroy/render.png_24.png" type="Texture" id=33]
[ext_resource path="res://sprites/Floor Destroy/render.png_25.png" type="Texture" id=34]
[ext_resource path="res://sprites/Floor Destroy/render.png_26.png" type="Texture" id=35]
[ext_resource path="res://sprites/Floor Destroy/render.png_27.png" type="Texture" id=36]
[ext_resource path="res://sprites/Floor Destroy/render.png_28.png" type="Texture" id=37]
[ext_resource path="res://sprites/Floor Destroy/render.png_29.png" type="Texture" id=38]
[ext_resource path="res://sprites/Floor Destroy/render.png_30.png" type="Texture" id=39]
[ext_resource path="res://sprites/Floor Destroy/render.png_31.png" type="Texture" id=40]
[ext_resource path="res://sprites/Floor Destroy/render.png_32.png" type="Texture" id=41]
[ext_resource path="res://sprites/Floor Destroy/render.png_33.png" type="Texture" id=42]
[ext_resource path="res://sprites/Floor Destroy/render.png_34.png" type="Texture" id=43]
[ext_resource path="res://sprites/Floor Destroy/render.png_35.png" type="Texture" id=44]
[ext_resource path="res://sprites/Floor Destroy/render.png_36.png" type="Texture" id=45]
[ext_resource path="res://sprites/Floor Destroy/render.png_37.png" type="Texture" id=46]
[ext_resource path="res://sprites/Floor Destroy/render.png_38.png" type="Texture" id=47]
[ext_resource path="res://sprites/Floor Destroy/render.png_39.png" type="Texture" id=48]
[ext_resource path="res://sprites/Floor Destroy/render.png_40.png" type="Texture" id=49]
[ext_resource path="res://sprites/Floor Destroy/render.png_41.png" type="Texture" id=50]
[ext_resource path="res://sprites/Floor Destroy/render.png_42.png" type="Texture" id=51]
[ext_resource path="res://sprites/Floor Destroy/render.png_43.png" type="Texture" id=52]
[ext_resource path="res://sprites/Floor Destroy/render.png_44.png" type="Texture" id=53]
[ext_resource path="res://sprites/Floor Destroy/render.png_45.png" type="Texture" id=54]
[ext_resource path="res://sprites/Floor Destroy/render.png_46.png" type="Texture" id=55]
[ext_resource path="res://sprites/Floor Destroy/render.png_47.png" type="Texture" id=56]
[ext_resource path="res://sprites/Floor Destroy/render.png_48.png" type="Texture" id=57]
[ext_resource path="res://sprites/Floor Destroy/render.png_49.png" type="Texture" id=58]
[ext_resource path="res://sprites/Floor Destroy/render.png_50.png" type="Texture" id=59]
[ext_resource path="res://sprites/Floor Destroy/render.png_51.png" type="Texture" id=60]
[ext_resource path="res://sprites/Floor Destroy/render.png_52.png" type="Texture" id=61]
[ext_resource path="res://sprites/Floor Destroy/render.png_53.png" type="Texture" id=62]
[ext_resource path="res://sprites/Floor Destroy/render.png_54.png" type="Texture" id=63]
[ext_resource path="res://sprites/Floor Destroy/render.png_55.png" type="Texture" id=64]
[ext_resource path="res://sprites/Floor Destroy/render.png_56.png" type="Texture" id=65]
[ext_resource path="res://sprites/Floor Destroy/render.png_57.png" type="Texture" id=66]
[ext_resource path="res://sprites/Floor Destroy/render.png_58.png" type="Texture" id=67]
[ext_resource path="res://sprites/Floor Destroy/render.png_59.png" type="Texture" id=68]
[ext_resource path="res://RainParticles.tscn" type="PackedScene" id=69]
[ext_resource path="res://Human.tscn" type="PackedScene" id=70]
[ext_resource path="res://Well.tscn" type="PackedScene" id=71]
[ext_resource path="res://Water.tscn" type="PackedScene" id=72]
[ext_resource path="res://Water Bucket Holder.tscn" type="PackedScene" id=73]
[ext_resource path="res://Score.gd" type="Script" id=74]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 118.288, -11.29 ), Vector2( 118.288, -7.29004 ), Vector2( 118.288, -5.51 ), Vector2( 118.288, -2.68 ), Vector2( 118.288, -0.46 ), Vector2( 118.288, 1.41 ), Vector2( 118.288, 2.95 ), Vector2( 118.288, 4.6 ), Vector2( 118.288, 5.61 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.487701, 58.521 ), Vector2( 0.487701, 45.521 ), Vector2( 0.487701, 38.521 ), Vector2( 0.487701, 31.521 ), Vector2( 0.487701, 25.521 ), Vector2( 0.487701, 19.521 ), Vector2( 0.487701, 13.521 ), Vector2( 0.487701, 7.52101 ), Vector2( 0.487701, 1.52101 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ) ],
"loop": false,
"name": "dead",
"speed": 60.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 38
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Main Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 118.288, 5.61 )

[node name="TimerText" type="RichTextLabel" parent="Node2D"]
margin_left = 3.0
margin_top = -5.0
margin_right = 46.0
margin_bottom = 38.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.513726, 0.6, 0.560784, 1 )
text = "60"
script = ExtResource( 4 )

[node name="TimerAnim" type="AnimationPlayer" parent="Node2D/TimerText"]
anims/default = SubResource( 2 )
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="Node2D/TimerText"]
wait_time = 60.0
one_shot = true
autostart = true

[node name="DeadGround" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 2 )
texture = ExtResource( 6 )
centered = false

[node name="Floor" type="Sprite" parent="."]
editor/display_folded = true
texture = ExtResource( 7 )
centered = false

[node name="FloorTransition" type="AnimationPlayer" parent="Floor"]
anims/default = SubResource( 3 )
script = ExtResource( 8 )

[node name="FloorDead" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -0.0811157, -40.0014 )
frames = SubResource( 4 )
animation = "dead"
centered = false

[node name="RainParticles" parent="." instance=ExtResource( 69 )]
position = Vector2( 40.6473, -3.69984 )

[node name="RainParticles3" parent="." instance=ExtResource( 69 )]
position = Vector2( 125.015, -5.65054 )

[node name="RainParticles2" parent="." instance=ExtResource( 69 )]
position = Vector2( 208.408, -8.08892 )

[node name="Human" parent="." instance=ExtResource( 70 )]
position = Vector2( 135.674, 128.169 )

[node name="Well" parent="." instance=ExtResource( 71 )]
position = Vector2( 206.04, 121.24 )

[node name="Well2" parent="." instance=ExtResource( 71 )]
position = Vector2( 67.772, 121.218 )

[node name="Container" type="Node2D" parent="."]
editor/display_folded = true

[node name="Water And Holder" type="Node2D" parent="Container"]

[node name="Water" parent="Container/Water And Holder" instance=ExtResource( 72 )]
position = Vector2( 108.299, 133.457 )
player = NodePath("../../../Human")
bucket_id = NodePath("../Water Bucket Holder")

[node name="Water Bucket Holder" parent="Container/Water And Holder" instance=ExtResource( 73 )]
position = Vector2( 108.251, 134.454 )
holder_position = Vector2( 108.299, 133.457 )

[node name="Water And Holder2" type="Node2D" parent="Container"]

[node name="Water" parent="Container/Water And Holder2" instance=ExtResource( 72 )]
position = Vector2( 158.952, 133.031 )
player = NodePath("../../../Human")
bucket_id = NodePath("../Water Bucket Holder")

[node name="Water Bucket Holder" parent="Container/Water And Holder2" instance=ExtResource( 73 )]
position = Vector2( 158.842, 134.023 )
bucket_id = 1
holder_position = Vector2( 158.952, 133.031 )

[node name="Water And Holder3" type="Node2D" parent="Container"]

[node name="Water Bucket Holder" parent="Container/Water And Holder3" instance=ExtResource( 73 )]
position = Vector2( 234.378, 133.455 )
bucket_id = 1
occupied = false
holder_position = Vector2( 234.371, 132.4 )

[node name="Water And Holder4" type="Node2D" parent="Container"]

[node name="Water" parent="Container/Water And Holder4" instance=ExtResource( 72 )]
position = Vector2( 22.9128, 132.022 )
player = NodePath("../../../Human")

[node name="Water Bucket Holder" parent="Container/Water And Holder4" instance=ExtResource( 73 )]
position = Vector2( 45.1107, 133.132 )
bucket_id = 1
occupied = false
holder_position = Vector2( 45.104, 132.357 )

[node name="WinText" type="RichTextLabel" parent="."]
visible = false
margin_left = 59.0
margin_top = 34.0
margin_right = 218.0
margin_bottom = 100.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0.32549, 0.309804, 0.329412, 1 )
text = "WITH ALL THAT WATER COLLECTED, ANOTHER GENERATION GETS TO LIVE..."

[node name="LoseText" type="RichTextLabel" parent="."]
visible = false
margin_left = 67.243
margin_top = 34.2886
margin_right = 214.243
margin_bottom = 138.289
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.32549, 0.309804, 0.329412, 1 )
text = "WITH NOT ENOUGH WATER COLLECTED. YOU DRY OUT BEFORE THE NEXT RAIN YEAR..."

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 112.205
margin_top = 154.286
margin_right = 181.205
margin_bottom = 205.286
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0.937255, 0.623529, 0.623529, 1 )
custom_colors/font_color_shadow = Color( 0.32549, 0.309804, 0.329412, 1 )
text = "0/8"
script = ExtResource( 74 )
[connection signal="timeout" from="Node2D/TimerText/Timer" to="." method="_on_Timer_timeout"]
